--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = "1.0"
 group = "com.einalem.rainbowore" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "rainbowore"
+archivesBaseName = "rainbowore-mc1.12"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
@@ -20,7 +20,7 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12.2-14.23.0.2491"
+    version = "1.12-14.21.1.2387"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
